# zoho-scripts

./: .flake8  README.md  env.example  pyproject.toml
zoho/: __init__.py  __main__.py  client.py  settings.py
zoho/commands/: __init__.py
zoho/commands/config/: __init__.py  org.py  setup.py
zoho/commands/invoices/: __init__.py  list.py  report_gaps.py
zoho/managers/: __init__.py  invoices.py
